[package]
name = "umobile-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["multipart", "cookies"] }
scraper = "0.16.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
