[package]
name = "umobile-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
ctrlc = { version = "3.4.0", features = ["termination"] }
envy = "0.4.2"
reqwest = { version = "0.11.18", features = ["multipart", "cookies"] }
scraper = "0.16.0"
serde = { version = "1.0.164", features = ["derive"] }
stopper = "0.2.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
